fix: header spacing

--- a/components/header.css
+++ b/components/header.css
@@ -52,7 +52,7 @@
   height: 50px;
 }
 .searchInput {
-  background-color: #fcfafa;
+  background-color: #f9f9f9da;
   opacity: 0.7;
   font-size: 1em;
   font-weight: 500;
@@ -60,7 +60,7 @@
   border: none;
   border-radius: 30px;
   cursor: text;
-  width: 200px;
+  width: 240px;
 }
 input:focus {
   outline: none;
@@ -97,8 +97,8 @@ input::-moz-focus-inner {
 #setaModal {
   background-color: white;
   position: absolute;
-  top: -5px;
-  left: 33px;
+  top: -25px;
+  left: 10px;
   rotate: 45deg;
   width: 9px;
   height: 9px;
@@ -240,8 +240,8 @@ input::-moz-focus-inner {
 #underImg_logo {
   cursor: pointer;
   position: absolute;
-  top: 50px;
-  left: 15px;
+  top: 58px;
+  left: 18px;
 }
 
 .underSearch_icon_container {
@@ -251,7 +251,7 @@ input::-moz-focus-inner {
   margin-top: 7px;
   align-items: center;
   position: absolute;
-  top: 35px;
+  top: 40px;
   left: 170px;
 }
 #underMagnifying_icon {
@@ -320,7 +320,7 @@ input::-moz-focus-inner {
   justify-self: flex-end;
   position: absolute;
   right: 150px;
-  bottom: 5px;
+  bottom: 0%;
   cursor: pointer;
   width: 40px;
   height: 20px;
@@ -388,8 +388,8 @@ input::-moz-focus-inner {
   color: white;
   font-size: 0.9em;
   text-align: center;
-  height: 22px;
-  width: 70px;
+  height: 24px;
+  width: 63px;
   border: none;
   border-radius: 30px;
   cursor: pointer;
